# resume-critiquer

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  main.py  pyproject.toml
app/: __init__.py  config.py
app/core/: __init__.py  resume_parser.py
app/services/: __init__.py  ai_analyzer.py
app/ui/: __init__.py  components.py  styles.py
