[project]
name = "resume-critiquer"
version = "1.0.0"
description = "Professional AI-powered resume analyzer using OpenAI and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.36.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "pydantic-settings>=2.0.0",
]
